--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [ "3.8", "3.9", "3.10" ]  # You can adjust Python versions as needed
+        python-version: ["3.10" ] 
 
     steps:
       - name: Checkout repository
@@ -23,10 +23,13 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: Install Poetry
         run: |
-          python -m pip install --upgrade pip
-          pip install fastapi uvicorn pytest
-          
+          curl -sSL https://install.python-poetry.org | python -
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Install dependencies via Poetry
+        run: poetry install --no-interaction --no-ansi
+
       - name: Run tests
-        run: pytest
+        run: poetry run pytest
