--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: Run Tests and Generate Report
 
 on:
   push:
@@ -12,13 +12,13 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.10" ] 
+        python-version: [ "3.8", "3.9", "3.10" ]
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
@@ -31,5 +31,11 @@ jobs:
       - name: Install dependencies via Poetry
         run: poetry install --no-interaction --no-ansi
 
-      - name: Run tests
-        run: poetry run pytest
+      - name: Run Tests with HTML Report
+        run: poetry run pytest --html=report.html --self-contained-html
+
+      - name: Upload HTML Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: html-report
+          path: report.html
