--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ httpx = "^0.28.1"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
 pytest-cov = "^4.0.0"
+pytest-html = "^4.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
