--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,16 +18,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          version: '2.2.2'
-
+        run: |
+          curl -sSL https://install.python-poetry.org | python -
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
       - name: Install dependencies via Poetry
         run: poetry install --no-interaction --no-ansi
 
