--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,15 @@ python = "^3.8"
 fastapi = "^0.115.12"
 uvicorn = { extras = ["standard"], version = "^0.22.0" }
 httpx = "^0.28.1"
+mkdocs = "^1.6.1"
+mkdocs-material = "^9.6.11"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
 pytest-cov = "^4.0.0"
 pytest-html = "^4.1.1"
+mkdocs-git-revision-date-localized-plugin = "^1.4.5"
+mkdocs-minify-plugin = "^0.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
